--- a/src/www/ui_components/server-connection-viz.html
+++ b/src/www/ui_components/server-connection-viz.html
@@ -175,13 +175,13 @@
     </style>
     <div id="container">
       <paper-ripple id="ripple" noink="" center=""></paper-ripple>
-      <img id="sm-grey" src$="[[rootPath]]assets/disc_grey.png" class$="grey {{animationState}}">
-      <img id="sm" src$="[[rootPath]]assets/disc_color.png" class$="green {{animationState}}">
-      <img id="md-grey" src$="[[rootPath]]assets/disc_grey.png" class$="grey {{animationState}}">
-      <img id="md" src$="[[rootPath]]assets/disc_color.png" class$="green {{animationState}}">
-      <img id="lg-grey" src$="[[rootPath]]assets/disc_grey.png" class$="grey {{animationState}}">
-      <img id="lg-zero" src$="[[rootPath]]assets/disc_empty.png" class$="{{state}}">
-      <img id="lg" src$="[[rootPath]]assets/disc_color.png" class$="green {{animationState}}">
+      <img id="sm-grey" src$="[[rootPath]]assets/disc_grey.svg" class$="grey {{animationState}}">
+      <img id="sm" src$="[[rootPath]]assets/disc_color.svg" class$=" {{animationState}}">
+      <img id="md-grey" src$="[[rootPath]]assets/disc_grey.svg" class$="grey {{animationState}}">
+      <img id="md" src$="[[rootPath]]assets/disc_color.svg" class$=" {{animationState}}">
+      <img id="lg-grey" src$="[[rootPath]]assets/disc_grey.svg" class$="grey {{animationState}}">
+      <img id="lg-zero" src$="[[rootPath]]assets/disc_empty.svg" class$="{{state}}">
+      <img id="lg" src$="[[rootPath]]assets/disc_color.svg" class$=" {{animationState}}">
     </div>
   </template>
   <script>
