--- a/src/www/ui_components/app-root.html
+++ b/src/www/ui_components/app-root.html
@@ -50,7 +50,7 @@
       :host {
         --app-toolbar-height: 40px;
         --light-green: #2fbea5;
-        --medium-green: #009688;
+        --medium-green: #4793A3;
         --dark-green: #263238;
         --light-gray: #ECECEC;
         --paper-dialog-button-color: var(--medium-green);
@@ -63,7 +63,8 @@
         height: 56px;
       }
 
-      app-header, app-toolbar {
+      app-header,
+      app-toolbar {
         position: fixed;
         top: 0;
         left: 0;
@@ -85,7 +86,7 @@
       }
 
       app-toolbar img {
-        height: 19px;
+        height: 25px;
         margin-top: 2px;
       }
 
@@ -94,7 +95,8 @@
         --paper-icon-button-ink-color: #eff;
       }
 
-      #app-toolbar-left, #app-toolbar-right {
+      #app-toolbar-left,
+      #app-toolbar-right {
         flex: 1;
         min-width: 40px;
       }
@@ -116,6 +118,7 @@
       #drawer-nav paper-icon-item {
         cursor: pointer;
         font-size: 16px;
+
         --paper-item-selected: {
           color: var(--medium-green);
           background-color: var(--light-gray);
@@ -128,10 +131,12 @@
         color: var(--medium-green);
         background-color: var(--light-gray);
       }
+
       /* rtl:end:ignore */
 
       /* Manually reverse icons that require mirroring in RTL languages. */
-      :host(:dir(rtl)) #feedback-icon, :host(:dir(rtl)) #backBtn {
+      :host(:dir(rtl)) #feedback-icon,
+      :host(:dir(rtl)) #backBtn {
         transform: scaleX(-1);
       }
 
@@ -175,8 +180,8 @@
         padding-top: 12px;
       }
 
-      paper-item > :first-child {
-        color: rgba(0,0,0,0.54);
+      paper-item> :first-child {
+        color: rgba(0, 0, 0, 0.54);
         font-size: 14px;
         text-decoration: none;
         width: 100%;
@@ -202,19 +207,23 @@
         :host {
           --app-drawer-width: 250px;
         }
+
         #drawer-nav paper-icon-item {
           min-height: 42px;
         }
       }
+
       @media (min-height: 600px) {
         #logo-nav {
           height: 180px;
         }
+
         #logo {
           width: 68px;
           height: 68px;
           margin-top: 56px;
         }
+
         #drawer-nav paper-item {
           min-height: 48px;
         }
@@ -229,25 +238,30 @@
       <app-header slot="header" fixed>
         <app-toolbar>
           <div id="app-toolbar-left">
-            <paper-icon-button id="menuBtn" hidden$="[[shouldShowBackButton]]" icon="menu" on-tap="openDrawer"></paper-icon-button>
-            <paper-icon-button id="backBtn" hidden$="[[!shouldShowBackButton]]" icon="arrow-back" on-tap="_goBack"></paper-icon-button>
+            <paper-icon-button id="menuBtn" hidden$="[[shouldShowBackButton]]" icon="menu" on-tap="openDrawer">
+            </paper-icon-button>
+            <paper-icon-button id="backBtn" hidden$="[[!shouldShowBackButton]]" icon="arrow-back" on-tap="_goBack">
+            </paper-icon-button>
           </div>
           <div main-title class$="[[page]]">
             <img src$="[[rootPath]]assets/outline-client-logo.svg" hidden$="[[!shouldShowAppLogo]]">
             <div hidden$="[[shouldShowAppLogo]]">[[localize(pageTitleKey)]]</div>
           </div>
           <div id="app-toolbar-right">
-            <paper-icon-button id="addBtn" icon="add" on-tap="promptAddServer" hidden$="[[!shouldShowAddButton]]"></paper-icon-button>
+            <paper-icon-button id="addBtn" icon="add" on-tap="promptAddServer" hidden$="[[!shouldShowAddButton]]">
+            </paper-icon-button>
           </div>
         </app-toolbar>
       </app-header>
 
       <iron-pages id="pages" selected="[[page]]" attr-for-selected="name">
-        <servers-view name="servers" id="serversView" servers="{{servers}}" root-path="[[rootPath]]" localize="[[localize]]"></servers-view>
+        <servers-view name="servers" id="serversView" servers="{{servers}}" root-path="[[rootPath]]"
+          localize="[[localize]]"></servers-view>
         <feedback-view name="feedback" id="feedbackView" localize="[[localize]]"></feedback-view>
         <about-view name="about" id="aboutView" localize="[[localize]]" root-path="[[rootPath]]"></about-view>
         <!-- Do not mirror licenses text, as it is not localized. -->
-        <licenses-view name="licenses" id="licensesView" dir="ltr" localize="[[localize]]" root-path="[[rootPath]]"></licenses-view>
+        <licenses-view name="licenses" id="licensesView" dir="ltr" localize="[[localize]]" root-path="[[rootPath]]">
+        </licenses-view>
       </iron-pages>
 
     </app-header-layout>
@@ -289,9 +303,10 @@
       -->
 
       <div id="logo-nav">
-        <img src$="[[rootPath]]assets/logo-nav.png" alt="logo" id="logo">
+        <img src$="[[rootPath]]assets/logo-nav.svg" alt="logo" id="logo">
       </div>
-      <hr class="nav-hr"></hr>
+      <hr class="nav-hr">
+      </hr>
       <paper-listbox id="drawer-nav" selected="{{routeData.page}}" attr-for-selected="name" on-tap="closeDrawer">
         <paper-icon-item name="servers">
           <iron-icon icon="outline-icons:outline" slot="item-icon"></iron-icon>
@@ -306,25 +321,27 @@
           [[localize('about-page-title')]]
         </paper-icon-item>
         <paper-icon-item name="help" class$="[[_computeIsLastVisibleMenuItem(shouldShowQuitButton)]]">
-          <a href="https://s3.amazonaws.com/outline-vpn/index.html#/support" id="helpAnchor" hidden></a>
+          <a href="http://www.nzuri.app/support" id="helpAnchor" hidden></a>
           <iron-icon icon="help" slot="item-icon"></iron-icon>
           [[localize('help-page-title')]]
         </paper-icon-item>
-        <paper-icon-item name="quit" class="last-menu-item"  hidden$="[[!shouldShowQuitButton]]">
+        <paper-icon-item name="quit" class="last-menu-item" hidden$="[[!shouldShowQuitButton]]">
           <iron-icon icon="cancel" slot="item-icon"></iron-icon>
           [[localize('quit')]]
         </paper-icon-item>
         <paper-item class="border-top">
-          <a href="https://www.google.com/policies/privacy/">[[localize('privacy')]]</a>
+          <a href="http://www.nzuri.app/privacy-policy/">[[localize('privacy')]]</a>
         </paper-item>
         <paper-item>
-           <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">[[localize('data-collection')]]</a>
+          <a
+            href="http://www.nzuri.app/support">[[localize('data-collection')]]</a>
         </paper-item>
         <paper-item>
-           <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">[[localize('terms')]]</a>
+          <a
+            href="http://www.nzuri.app/terms-of-service">[[localize('terms')]]</a>
         </paper-item>
         <paper-item name="licenses">
-           <span>[[localize('licenses-page-title')]]</span>
+          <span>[[localize('licenses-page-title')]]</span>
         </paper-item>
       </paper-listbox>
     </app-drawer>
@@ -340,7 +357,8 @@
     https://github.com/PolymerElements/paper-dialog/issues/152 and
     https://github.com/PolymerElements/app-layout/issues/295
     Once those are fixed we can consider moving this into server-card.html -->
-    <server-rename-dialog id="serverRenameDialog" root-path="[[rootPath]]" localize="[[localize]]"></server-rename-dialog>
+    <server-rename-dialog id="serverRenameDialog" root-path="[[rootPath]]" localize="[[localize]]">
+    </server-rename-dialog>
   </template>
   <script>
     'use strict';
@@ -351,7 +369,7 @@
     Polymer({
       is: 'app-root',
       behaviors: [
-         Polymer.AppLocalizeBehavior
+        Polymer.AppLocalizeBehavior
       ],
       ready: function () {
         var url = this.rootPath + 'messages/' + this.language + '.json';
@@ -367,7 +385,7 @@
         // Monkeypatch the faulty Polymer.IronButtonStateImpl._detectKeyboardFocus implementation
         // with a no-op for the three buttons where the focus styles are incorrectly applied most
         // often / where it looks most noticeably broken.
-        function noop() {};
+        function noop() { };
         var buttons = [this.$.menuBtn, this.$.backBtn, this.$.addBtn];
         for (var i = 0, button = buttons[i]; button; button = buttons[++i]) {
           button._detectKeyboardFocus = noop;
@@ -375,7 +393,7 @@
 
         if (!Event.prototype.composedPath) {
           // Polyfill for Safari 9.0. See https://dom.spec.whatwg.org/#dom-event-composedpath.
-          Event.prototype.composedPath = function() {
+          Event.prototype.composedPath = function () {
             if (this.path) {
               return this.path; // ShadowDOM v0 equivalent property.
             }
@@ -401,7 +419,7 @@
         if (window.hasOwnProperty('cordova')) {
           // Wait until Cordova is ready to access the device plugin. This listener will execute
           // synchronously if the 'deviceready' event has already fired.
-          document.addEventListener('deviceready', function() {
+          document.addEventListener('deviceready', function () {
             this.platform = device.platform;
           }.bind(this));
         } else {
@@ -424,50 +442,50 @@
           type: Object,
           readonly: true,
           value: {
-            am: {id: 'am', dir: 'ltr'},
-            ar: {id: 'ar', dir: 'rtl'},
-            bg: {id: 'bg', dir: 'ltr'},
-            ca: {id: 'ca', dir: 'ltr'},
-            cs: {id: 'cs', dir: 'ltr'},
-            da: {id: 'da', dir: 'ltr'},
-            de: {id: 'de', dir: 'ltr'},
-            el: {id: 'el', dir: 'ltr'},
-            en: {id: 'en', dir: 'ltr'},
-            'es-419': {id: 'es-419', dir: 'ltr'},
-            fa: {id: 'fa', dir: 'rtl'},
-            fi: {id: 'fi', dir: 'ltr'},
-            fil: {id: 'fil', dir: 'ltr'},
-            fr: {id: 'fr', dir: 'ltr'},
-            he: {id: 'he', dir: 'rtl'},
-            hi: {id: 'hi', dir: 'ltr'},
-            hr: {id: 'hr', dir: 'ltr'},
-            hu: {id: 'hu', dir: 'ltr'},
-            id: {id: 'id', dir: 'ltr'},
-            it: {id: 'it', dir: 'ltr'},
-            ja: {id: 'ja', dir: 'ltr'},
-            ko: {id: 'ko', dir: 'ltr'},
-            km: {id: 'km', dir: 'ltr'},
-            lt: {id: 'lt', dir: 'ltr'},
-            lv: {id: 'lv', dir: 'ltr'},
-            nl: {id: 'nl', dir: 'ltr'},
-            no: {id: 'no', dir: 'ltr'},
-            pl: {id: 'pl', dir: 'ltr'},
-            'pt-BR': {id: 'pt-BR', dir: 'ltr'},
-            ro: {id: 'ro', dir: 'ltr'},
-            ru: {id: 'ru', dir: 'ltr'},
-            sk: {id: 'sk', dir: 'ltr'},
-            sl: {id: 'sl', dir: 'ltr'},
-            sr: {id: 'sr', dir: 'ltr'},
-            'sr-Latn': {id: 'sr-Latn', dir: 'ltr'},
-            sv: {id: 'sv', dir: 'ltr'},
-            th: {id: 'th', dir: 'ltr'},
-            tr: {id: 'tr', dir: 'ltr'},
-            uk: {id: 'uk', dir: 'ltr'},
-            ur: {id: 'ur', dir: 'rtl'},
-            vi: {id: 'vi', dir: 'ltr'},
-            zh: {id: 'zh', dir: 'ltr'},
-            'zh-CN': {id: 'zh-CN', dir: 'ltr'},
-            'zh-TW': {id: 'zh-TW', dir: 'ltr'},
+            am: { id: 'am', dir: 'ltr' },
+            ar: { id: 'ar', dir: 'rtl' },
+            bg: { id: 'bg', dir: 'ltr' },
+            ca: { id: 'ca', dir: 'ltr' },
+            cs: { id: 'cs', dir: 'ltr' },
+            da: { id: 'da', dir: 'ltr' },
+            de: { id: 'de', dir: 'ltr' },
+            el: { id: 'el', dir: 'ltr' },
+            en: { id: 'en', dir: 'ltr' },
+            'es-419': { id: 'es-419', dir: 'ltr' },
+            fa: { id: 'fa', dir: 'rtl' },
+            fi: { id: 'fi', dir: 'ltr' },
+            fil: { id: 'fil', dir: 'ltr' },
+            fr: { id: 'fr', dir: 'ltr' },
+            he: { id: 'he', dir: 'rtl' },
+            hi: { id: 'hi', dir: 'ltr' },
+            hr: { id: 'hr', dir: 'ltr' },
+            hu: { id: 'hu', dir: 'ltr' },
+            id: { id: 'id', dir: 'ltr' },
+            it: { id: 'it', dir: 'ltr' },
+            ja: { id: 'ja', dir: 'ltr' },
+            ko: { id: 'ko', dir: 'ltr' },
+            km: { id: 'km', dir: 'ltr' },
+            lt: { id: 'lt', dir: 'ltr' },
+            lv: { id: 'lv', dir: 'ltr' },
+            nl: { id: 'nl', dir: 'ltr' },
+            no: { id: 'no', dir: 'ltr' },
+            pl: { id: 'pl', dir: 'ltr' },
+            'pt-BR': { id: 'pt-BR', dir: 'ltr' },
+            ro: { id: 'ro', dir: 'ltr' },
+            ru: { id: 'ru', dir: 'ltr' },
+            sk: { id: 'sk', dir: 'ltr' },
+            sl: { id: 'sl', dir: 'ltr' },
+            sr: { id: 'sr', dir: 'ltr' },
+            'sr-Latn': { id: 'sr-Latn', dir: 'ltr' },
+            sv: { id: 'sv', dir: 'ltr' },
+            th: { id: 'th', dir: 'ltr' },
+            tr: { id: 'tr', dir: 'ltr' },
+            uk: { id: 'uk', dir: 'ltr' },
+            ur: { id: 'ur', dir: 'rtl' },
+            vi: { id: 'vi', dir: 'ltr' },
+            zh: { id: 'zh', dir: 'ltr' },
+            'zh-CN': { id: 'zh-CN', dir: 'ltr' },
+            'zh-TW': { id: 'zh-TW', dir: 'ltr' },
           }
         },
         language: {
@@ -566,7 +584,7 @@
               button._handler = buttonHandler;
             } else {
               this.toastUrl = buttonUrl;
-              button._handler = function() {
+              button._handler = function () {
                 this.$.toastUrl.click();
               }.bind(this);
             }
@@ -656,13 +674,13 @@
       _computeShouldShowQuitButton: function (platform) {
         return platform === 'Mac OS X' || platform === 'Electron';
       },
-      _computeIsLastVisibleMenuItem: function(shouldShowQuitButton) {
+      _computeIsLastVisibleMenuItem: function (shouldShowQuitButton) {
         return shouldShowQuitButton ? '' : 'last-menu-item';
       },
-      showServerRename: function(event) {
+      showServerRename: function (event) {
         this.$.serverRenameDialog.open(event.detail.serverName, event.detail.serverId);
       },
-      _computeShouldShowAppLogo: function(page) {
+      _computeShouldShowAppLogo: function (page) {
         return page === 'servers';
       },
     });
