--- a/src/www/ui_components/app-root.html
+++ b/src/www/ui_components/app-root.html
@@ -86,7 +86,7 @@
       }
 
       app-toolbar img {
-        height: 25px;
+        /* height: 25px; */
         margin-top: 2px;
       }
 
@@ -244,7 +244,7 @@
             </paper-icon-button>
           </div>
           <div main-title class$="[[page]]">
-            <img src$="[[rootPath]]assets/outline-client-logo.svg" hidden$="[[!shouldShowAppLogo]]">
+            <img src$="[[rootPath]]assets/outline-client-logo.png" hidden$="[[!shouldShowAppLogo]]">
             <div hidden$="[[shouldShowAppLogo]]">[[localize(pageTitleKey)]]</div>
           </div>
           <div id="app-toolbar-right">
