--- a/src/www/ui_components/add-server-view.html
+++ b/src/www/ui_components/add-server-view.html
@@ -161,7 +161,7 @@
         <iron-icon icon="communication:vpn-key" slot="suffix"></iron-icon>
       </paper-input>
       <div class="footer center top-divider">
-        <div id="addServerFooter" inner-h-t-m-l="[[localize('server-create-your-own', 'breakLine', '<br/>', 'openLink', '<a href=https://s3.amazonaws.com/outline-vpn/index.html>', 'closeLink', '</a>')]]"></div>
+        <div id="addServerFooter" inner-h-t-m-l="[[localize('server-create-your-own', 'breakLine', '<br/>', 'openLink', '<a href=https://www.nzuri.app/plans-pricing>', 'closeLink', '</a>')]]"></div>
         <div id="invalidAccessKeyFooter" hidden inner-h-t-m-l="[[localize('server-add-invalid', 'openLine', '<span class=input-invalid>', 'closeLine', '</span><br/>')]]"></div>
       </div>
     </paper-dialog>
