--- a/src/www/ui_components/feedback-view.html
+++ b/src/www/ui_components/feedback-view.html
@@ -87,7 +87,7 @@
 
         <paper-textarea id="feedback" name="feedback" label="[[localize('feedback-input')]]" rows="3" onkeydown="this.invalid = false;" required></paper-textarea>
 
-        <p class="info" inner-h-t-m-l="[[localize('feedback-privacy', 'privacyPolicyLinkOpen', '<a href=http://www.nzuri.app/support>', 'privacyPolicyLinkClose', '</a>')]]"></p>
+        <p class="info" inner-h-t-m-l="[[localize('feedback-privacy', 'privacyPolicyLinkOpen', '<a href=https://www.nzuri.app/support>', 'privacyPolicyLinkClose', '</a>')]]"></p>
       </div>
       <div class="card-actions">
         <paper-button id="submitButton" disabled$="[[submitting]]">[[submitButtonLabel]]</paper-button>
