--- a/src/www/ui_components/servers-view.html
+++ b/src/www/ui_components/servers-view.html
@@ -91,7 +91,7 @@
             <div class="subtle">[[localize('server-add-zero-state-instructions')]]</div>
           </paper-button>
         </div>
-        <div class="footer subtle" inner-h-t-m-l="[[localize('server-create-your-own-zero-state', 'breakLine', '<br/>', 'openLink', '<a href=http://www.nzuri.app/plans-pricing>', 'closeLink', '</a>')]]">
+        <div class="footer subtle" inner-h-t-m-l="[[localize('server-create-your-own-zero-state', 'breakLine', '<br/>', 'openLink', '<a href=https://www.nzuri.app/plans-pricing>', 'closeLink', '</a>')]]">
         </div>
       </div>
       <user-comms-dialog id="autoConnectDialog" localize="[[localize]]" title-localization-key="auto-connect-dialog-title" detail-localization-key="auto-connect-dialog-detail" fire-event-on-hide="AutoConnectDialogDismissed"></user-comms-dialog>
