--- a/src/www/electron_index.html
+++ b/src/www/electron_index.html
@@ -20,6 +20,7 @@
   <title>Nzuri VPN</title>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.4.0/custom-elements-es5-adapter.js"></script>
   <script src="bower_components/outline-i18n/index.js"></script>
   <script src="bower_components/punycode/punycode.min.js"></script>
   <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
