--- a/src/www/ui_components/privacy-view.html
+++ b/src/www/ui_components/privacy-view.html
@@ -42,6 +42,7 @@
       #privacy-lock {
         width: 112px;
         height: 158px;
+        object-fit: cover;
       }
       #footer-container {
         text-align: center;
@@ -81,6 +82,7 @@
         #privacy-lock {
           width: 90px;
           height: 127px;
+          object-fit: cover;
         }
         #button-container {
           margin: 24px 0 0 0;
@@ -93,6 +95,7 @@
         #privacy-lock {
           width: 168px;
           height: 237px;
+          object-fit: cover;
         }
         #footer {
           margin: 48px auto;
@@ -117,7 +120,7 @@
           <h3>[[localize('privacy-title')]]</h3>
           <p class="faded">[[localize('privacy-text')]]</p>
           <div id="button-container">
-            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">
+            <a href="https://www.nzuri.app/support">
               <paper-button class="faded">[[localize('learn-more')]]</paper-button>
             </a>
             <paper-button on-tap="_privacyTermsAcked">[[localize('got-it')]]</paper-button>
