UI changes done 11 Dec 2019

--- a/src/www/ui_components/add-server-view.html
+++ b/src/www/ui_components/add-server-view.html
@@ -82,7 +82,7 @@
       }
       #addServerSheet paper-input {
         --paper-input-container-label: {
-          color: rgba(0,0,0,0.30);
+          color: #4793a3;
         };
       }
       .footer {
@@ -141,6 +141,10 @@
         --iron-icon-fill-color: #333;
         opacity: 0.4;
         margin-left: 12px;
+      }
+      .shadow iron-icon {
+        --iron-icon-fill-color: #4793a3;
+        opacity: 1;
       }
       #serverDetectedSheet iron-icon {
         opacity: 1.0;
