--- a/src/www/ui_components/about-view.html
+++ b/src/www/ui_components/about-view.html
@@ -39,7 +39,7 @@
       #footer {
         flex: 1;
         margin: 36px 0 4px 0;
-        text-align: left;
+        /* text-align: left; */
       }
 
 
@@ -58,7 +58,7 @@
       }
 
       #jigsaw-logo {
-        height: 50px;
+        height: 80px;
       }
 
       .social-icon {
@@ -69,7 +69,7 @@
 
       #social-logo {
         width: 26px;
-        padding: 0 1rem;
+        padding: 0 0.6rem;
 
       }
 
@@ -83,9 +83,9 @@
           margin-top: 36px;
         }
 
-        #jigsaw-logo {
+        /* #jigsaw-logo {
           width: 220px;
-        }
+        } */
       }
 
       @media (max-height: 550px) {
@@ -104,8 +104,6 @@
 
         #footer {
           margin: 36px 0 4px 0;
-          bottom: 0;
-    position: fixed;
         }
       }
 
@@ -129,13 +127,13 @@
           <img id="social-logo" src$="[[rootPath]]assets/facebook.png">
         </a>
         <a href="https://www.instagram.com/nzurivpn/">
-          <img id="social-logo" src$="[[rootPath]]assets/instgram.png">
+          <img id="social-logo" src$="[[rootPath]]assets/instagram.png">
         </a>
         <a href="https://twitter.com/NzuriVpn">
           <img id="social-logo" src$="[[rootPath]]assets/twitter.png">
         </a>
         <a href="https://www.youtube.com/channel/UC5NmUbIZSKwm6wLCm-gx3AQ">
-          <img id="social-logo" src$="[[rootPath]]assets/youTube.png">
+          <img id="social-logo" src$="[[rootPath]]assets/youtube.png">
         </a>
       </div>
       <div id="footer">
