Change done(12 Dec 2019)

--- a/src/www/ui_components/about-view.html
+++ b/src/www/ui_components/about-view.html
@@ -57,7 +57,7 @@
         margin: 32px auto;
       }
 
-      #jigsaw-logo {
+      #mansa-logo {
         height: 80px;
       }
 
@@ -83,7 +83,7 @@
           margin-top: 36px;
         }
 
-        /* #jigsaw-logo {
+        /* #mansa-logo {
           width: 220px;
         } */
       }
@@ -139,7 +139,7 @@
       <div id="footer">
 
         <a href="https://www.mansa.technology/about">
-          <img id="jigsaw-logo" src$="[[rootPath]]assets/mansa-technology-logo.png">
+          <img id="mansa-logo" src$="[[rootPath]]assets/mansa-technology-logo.png">
         </a>
 
       </div>
